--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,16 @@
 chess==1.4.0
+cssselect2==0.4.1
 cycler==0.10.0
 kiwisolver==1.3.1
+lxml==4.6.2
 matplotlib==3.3.4
 numpy==1.20.1
 Pillow==8.1.0
 pyparsing==2.4.7
 python-chess==1.999
 python-dateutil==2.8.1
+reportlab==3.5.59
 six==1.15.0
+svglib==1.0.1
+tinycss2==1.1.0
+webencodings==0.5.1
